<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Calories.CaloriesFragment">

    <TextView
        android:id="@+id/text_calories"
        android:layout_width="399dp"
        android:layout_height="70dp"
        android:layout_marginBottom="120dp"
        android:textAlignment="center"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputHeight" />

    <TextView
        android:id="@+id/textViewOpis"
        android:layout_width="319dp"
        android:layout_height="67dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/harrisa_benedicta_obliczanie_zapotrzebowania_kcal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/InputHeight"
        android:layout_width="224dp"
        android:layout_height="78dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="33dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_your_height_cm"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/text_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/InputWeight" />

    <EditText
        android:id="@+id/InputWeight"
        android:layout_width="217dp"
        android:layout_height="71dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="39dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_your_weight_kg"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/InputHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpis"
        app:layout_constraintVertical_bias="0.37" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/InputWeight"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="243dp">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:text="@string/kobieta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOpis" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/me_czyzna"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toEndOf="@+id/radioButton1"
            app:layout_constraintTop_toBottomOf="@+id/textViewOpis" />
    </RadioGroup>

    <EditText
        android:id="@+id/age"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_your_age"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/InputHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/InputWeight"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="18dp"
        android:text="@string/calc"
        app:layout_constraintBottom_toTopOf="@+id/text_calories"
        app:layout_constraintEnd_toStartOf="@+id/InputHeight"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>